v1.2: self-host Jolly Lodger, fix top spacing

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: 'Jolly Lodger';
   font-style: normal;
   font-weight: 400;
-  font-display: block;
+  font-display: swap;
   src: url('/fonts/jolly-lodger-latin-400-normal.woff2') format('woff2');
 }
 
